fixed background problem on mobile by not making it an image, made it a color

--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -33,14 +33,23 @@ h2, h1{
   margin-top: 0px;
 }
 
-
-body{
-	background-image: 
+@media (min-width: 768px) {
+ body{
+  background-image: 
     linear-gradient(
       rgba(0, 0, 0, 0.5),
       rgba(0, 0, 0, 0.5)
     ),
  url("../img/beach.jpg");
+  }
+}
+
+
+
+@media (max-width: 768px) {
+  body{
+    background-color: black;
+  }
 }
 
 
